--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,8 @@
 {
-    "name": "doctrine/collections",
+    "name": "someniatko/doctrine-collections",
+    "replace": {
+        "doctrine/collections": "*"
+    },
     "type": "library",
     "description": "PHP Doctrine Collections library that adds additional functionality on top of PHP arrays.",
     "keywords": [
